# ov_maplab

./: CMakeLists.txt  Dockerfile  Dockerfile_ros1_20_04  ReadMe.md  entrypoint.sh  error_on_1804.txt  package.xml
.github/workflows/: build_ros1.yml
launch/: display.rviz  display_maplab.rviz  display_ovmsckf.rviz  pgeneva_eth.launch  pgeneva_tum.launch  serial.launch
scripts/: commands_eurocmav.yaml  commands_rpngplane.yaml  process_eurocmav.sh  process_rpngplane.sh
src/: export_to_openvins.cpp  ros1_serial_msckf.cpp  run_serial_msckf.cpp
src/mapper/: MapBuilder.cpp  MapBuilder.h
